--- a/style.css
+++ b/style.css
@@ -25,3 +25,38 @@ width: 100px;
     height: 50px;
     width: 100%;
 }
+
+.border{
+    border: 1.5px solid transparent;
+}
+
+.border:hover{
+    border: 1.5px solid white;
+}
+
+/* box2 */
+.add-first{
+color: #cccccc;
+font-size: 0.85rem;
+margin-left: 15px;
+
+}
+.add-second{
+    font-size: 1rem;
+    margin-left: 3px;
+
+}
+.add-icon{
+    display: flex;
+    align-items: center;
+}
+
+/* box3 */
+.nav-search{
+    display: flex;
+    justify-content:space-evenly ;
+    background-color: pink;
+    width: 620px;
+    height: 40px;
+    border-radius: 4px;
+}
