--- a/style.css
+++ b/style.css
@@ -90,3 +90,21 @@ margin-left: 15px;
 .nav-search:hover{
     border:2px solid orange
 }
+
+/* box4 */
+span{
+    font-size: 0.7rem;
+}
+.nav-second{
+    font-size:0.85rem ;
+    font-weight: 700;
+}
+
+/* box6 */
+.nav-cart i{
+    font-size: 30px;
+}
+.nav-cart{
+    font-size:0.8rem ;
+    font-weight: 700;
+}
