--- a/style.css
+++ b/style.css
@@ -108,3 +108,25 @@ span{
     font-size:0.8rem ;
     font-weight: 700;
 }
+
+/* panel */
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items:center ;
+    justify-content:space-evenly ;
+}
+.panel-ops p{
+display: inline;
+margin-left:15px ;
+}
+.panel-ops {
+    width: 70%;
+    font-size: 0.8rem;
+}
+.panel-deals{
+    font-size: 0.9rem;
+    font-weight: 700;
+}
